# ESPRI

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  compile-with-docker.sh  flash-with-esptool.sh  mp3towav.sh  partitions.csv  sdkconfig  sdkconfig.defaults
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: -bug--please-use-a-title-that-makes-sense.md  -feature--please-use-a-title-that-makes-sense.md  bug-report.md  feature-request.md
.github/workflows/: main.yml  main2.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: pcm-processor.js
frontend/src/: App.vue  main.ts  router.ts  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  idf_component.yml  main.c  settings.c  settings.h  system.c  system.h
main/app/: beacon.c  beacon.h  button.c  button.h  morse.c  morse.h  morse_code.c  morse_code.h  transmit.c  transmit.h  uvk5.c  uvk5.h
main/drivers/: uart.c  uart.h
main/dsp/: afsk.c  afsk.h  agc.c  agc.h  filter.c  filter.h
main/hardware/: audio.c  audio.h  button.c  button.h  http_server.c  http_server.h  i2s_example_pins.h  led.c  led.h  ptt.c  ptt.h  sd.c  sd.h  spiffs.c  spiffs.h  uart.c  uart.h  wifi.c  wifi.h  ws2812b.c  ws2812b.h
main/helper/: api.c  api.h  filesystem.c  filesystem.h  http.h  misc.h  rtos.h
main/storage/: index-BrXjI.css  index-C0jVb.css  index-DvNE_.css  index-Iw26f.css  index.html  myfile.txt  upload_script.html
main/storage/assets/: index-8gThoww7.js  index-9EThMSG3.js  index-AIO4oUjz.js  index-Ak6UB3VB.js  index-B0bZghxr.js  index-B2_he-MX.js  index-B8hq6Nq7.js  index-BDsHyyL1.js  index-BQIeTW79.js  index-BRHFA63L.js  index-BS4M__O3.js  index-BVHyqViX.js  index-BbbL6Sy1.js  index-Bihld4iX.js  index-Btw0EN1Y.js  index-C2rXwPvF.js  index-C3PysN4Z.js  index-CC0kqULF.js  index-CCQ5iMeY.js  index-CD3BmMhj.js  index-CJb_C7z9.js  index-CKTcurJV.js  index-COqswxEe.js  index-CPNgfvjp.js  index-CQDRvHXZ.js  index-CS0R3enC.js  index-CSim8gxR.js  index-CTSQmIYq.js  index-CXKe1VV8.js  index-Cav4_rZe.js  index-ChGP22yL.js  index-Cjvupn1i.js  index-CnIEjU-_.js  index-CnjajeTg.js  index-Csz29Mqm.js  index-CzZo_sBN.js  index-D7fsYjO4.js  index-D8EhOGkv.js  index-D8PVFoDa.js  index-DBU-L4Fd.js  (+18 more)
main/web/: router.c  router.h
main/web/handlers/: root.c  root.h  root_handler.c  root_handler.h  static_files.c  static_files.h  static_files_handler.c  static_files_handler.h  websocket.c  websocket.h
main/web/handlers/api/: audio.c  audio.h  event.c  event.h  event_handler.c  event_handler.h  settings.c  settings.h  system.c  system.h  uvk5_message.c  uvk5_message.h
(+49 files in other folders)
